# plain-dictionary

./: .gitignore  DEVELOPMENT_ENVIRONMENT_AUDIT.md  README.md  index.html  management.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  dictionary-release.yml
scripts/: build-dictionary.mjs  build-dictionary.test.mjs  create-dictionary-release.mjs
src/: ErrorBoundary.tsx  MainWindow.tsx  ManagementWindow.test.tsx  ManagementWindow.tsx  api.ts  main.tsx  management.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dictionary_seed.sql  lib.rs  main.rs
src/components/: EntryView.test.tsx  EntryView.tsx  FavoriteDialog.tsx  Icons.tsx
