[package]
name = "plain-dictionary"
version = "0.1.0"
description = "A small offline Chinese-English dictionary"
authors = ["Plain Dictionary contributors"]
edition = "2021"

[lib]
name = "plain_dictionary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "plain-dictionary"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
zstd = "0.13"
